# components

./: package.json
goldens/: ts-circular-deps.json
src/cdk/: config.bzl
src/cdk-experimental/: config.bzl
src/cdk-experimental/menu-aim/: BUILD.bazel  README.md  cdk-menu-aim.directive.ts  menu-aim-injectors.ts  menu-aim-module.ts  menu-aim-provider.ts  public-api.ts  types.ts
src/cdk-experimental/scrollable-table-body/: BUILD.bazel  scrollable-table-body-layout.ts
src/cdk-experimental/virtual-table/: BUILD.bazel  public-api.ts  virtual-data-source.ts  virtual-table-module.ts  virtual-table.ts
src/cdk/scrolling/: BUILD.bazel  _perf_util_DO_NOT_SUBMIT.ts  fixed-size-virtual-scroll.ts  list_renderer.ts  public-api.ts  scrolling-module.ts  variable-size-virtual-scroll.ts  virtual-for-of.ts  virtual-scroll-repeater.ts  virtual-scroll-service.ts  virtual-scroll-viewport.html  virtual-scroll-viewport.ts
src/cdk/table/: BUILD.bazel  cell.ts  public-api.ts  sticky-styler.ts  table-layout-renderer.ts  table-layout-strategy.ts  table-module.ts  table-virtual-scroll.ts  table.scss  table.spec.ts  table.ts
src/cdk/view/: BUILD.bazel  dispose-view-repeater-strategy.ts  public-api.ts  recycle-view-repeater-strategy.ts  view-repeater.ts
src/components-examples/: BUILD.bazel
src/components-examples/cdk-experimental/scrollable-table-body/cdk-scrollable-table-body-flex/: cdk-scrollable-table-body-flex-example.html  cdk-scrollable-table-body-flex-example.ts
src/components-examples/cdk-experimental/virtual-table/: BUILD.bazel  cdk-virtual-table-example.css  cdk-virtual-table-example.html  cdk-virtual-table-example.ts  index.ts
src/components-examples/cdk-experimental/virtual-table/cdk-virtual-table/: cdk-virtual-table-example.css  cdk-virtual-table-example.html  cdk-virtual-table-example.ts
src/components-examples/cdk/table/: index.ts
src/components-examples/cdk/table/cdk-table-fixed-column-widths/: cdk-table-fixed-column-widths-example.html  cdk-table-fixed-column-widths-example.ts
src/components-examples/material-experimental/scrollable-table-body/: BUILD.bazel  index.ts
src/components-examples/material-experimental/scrollable-table-body/mat-scrollable-table-body-flex/: mat-scrollable-table-body-flex-example.html  mat-scrollable-table-body-flex-example.ts
src/components-examples/material-experimental/scrollable-table-body/mat-scrollable-table-body-flex-sticky-rows/: mat-scrollable-table-body-flex-sticky-rows-example.css  mat-scrollable-table-body-flex-sticky-rows-example.html  mat-scrollable-table-body-flex-sticky-rows-example.ts
src/components-examples/material/table/: index.ts
src/components-examples/material/table/table-virtual-scroll/: fixed-size-table-virtual-scroll-strategy.ts  (+4 more)
src/dev-app/: index.html  main.ts
src/dev-app/menu/: BUILD.bazel  menu-demo-module.ts  menu-demo.html  menu-demo.scss  menu-demo.ts
src/dev-app/scrollable-table-body/: scrollable-table-body-demo.ts
src/dev-app/table/: BUILD.bazel  table-demo-module.ts  table-demo.html
src/dev-app/virtual-scroll/: BUILD.bazel  virtual-scroll-demo-module.ts  virtual-scroll-demo.html  virtual-scroll-demo.ts
src/e2e-app/: index.html
src/material-experimental/mdc-table/: module.ts  table.ts
src/material/menu/: menu-trigger.ts
src/material/table/: table-module.ts  table.scss  table.ts
tools/public_api_guard/cdk/: scrolling.d.ts
