load(
    "//tools:defaults.bzl",
    "ng_module",
)

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "view",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    module_name = "@angular/cdk/view",
    deps = [
        "@npm//@angular/core",
    ],
)

filegroup(
    name = "source-files",
    srcs = glob(["**/*.ts"]),
)
